# Computing-Methods

./: .gitignore  CMakeLists.txt  MethComp2.cpp  MethComp2.h  README.md  main.cpp
